--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.29.0
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.18.0
-python-dotenv==1.0.0
-supabase==2.0.0
+streamlit
+pandas
+numpy
+plotly
+python-dotenv
+supabase
